--- a/part3/phonebacke_backend/package.json
+++ b/part3/phonebacke_backend/package.json
@@ -4,11 +4,13 @@
   "description": "phonebackend with express and nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node  index.js",
+    "dev": "node --watch index.js"
   },
   "author": "Hazrr",
   "license": "MIT",
   "dependencies": {
-    "epxress": "^0.0.1-security"
+    "express": "^5.1.0"
   }
 }
